tests/baselines/reference/exportingContainingVisibleType.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
exportingContainingVisibleType.ts(4,16): error TS2454: Variable 'i' is used before being assigned.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== exportingContainingVisibleType.ts (1 errors) ====
    class Foo {
        public get foo() {
            var i: Foo;
            return i; // Should be fine (previous bug report visibility error).
                   ~
!!! error TS2454: Variable 'i' is used before being assigned.
     
        }
    }
     
    export var x = 5;
    